[tool.poetry]
name = "pql"
version = "0.1.0"
description = "Parallel Q Learning"
authors = ["Zechu Li, Tao Chen"]
license = "MIT"
packages = [
    { include = "hydra_plugins" },
]

[tool.poetry.dependencies]
python = ">=3.7, <3.9"
gym = ">=0.26.0"
hydra-core = ">=1.2.0"
loguru = ">=0.6.0"
ray = ">=1.13.0"
wandb = ">=0.13.5"
cloudpickle = ">=2.2.0"
scipy = ">=1.7.3"
shortuuid = ">=1.0.11"
ninja = ">=1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
